%%     \itemize{
%%       \item
%%     }
%%   }
%%   \subsection{User-visible changes}{
%%     \itemize{
%%       \item
%%     }
%%   }
%%   \subsection{Bug fixes}{
%%     \itemize{
%%       \item
%%     }
%%   }
%%   \subsection{Internal changes}{
%%     \itemize{
%%       \item
%%     }
%%   }
%%   \subsection{Documentation}{
%%     \itemize{
%%       \item
%%     }
%%   }
%% }
\section{Changes in pls version 2.7-1}{
  \subsection{Internal changes}{
    \itemize{
      \item Added temporary workaround in package tests for changes in RNG.
    }
  }
}
\section{Changes in pls version 2.7-0}{
  \subsection{New features}{
    \itemize{
      \item Now supports turning off the default centering of predictor
      and response matrices, through a new argument `center' to mvr()
      etal.  Suggested and implemented by Paul Hiemstra.
      \item Added argument `maxit' to oscorespls.fit(), to avoid a
      possible infinite loop for some near-orthoginal predictor
      matrices.  Suggested by Martin Binder.
    }
  }
  \subsection{Internal changes}{
    \itemize{
      \item Added a test suite.
    }
  }
  \subsection{Documentation}{
    \itemize{
      \item Clarification of selectNcomp() documentation.
    }
  }
}
\section{Changes in pls version 2.6-0}{
  \subsection{New features}{
    \itemize{
      \item Added selectNcom() to automatically select the optimal
      number of components, optionally plotting the selection.
      \item Added argument "ask" to the plot functions that can generate
      multi-page plots, mimicking plot.lm().
    }
  }
  \subsection{Documentation}{
    \itemize{
      \item Added description of selectNcomp() in the vignette.
    }
  }
}
\section{Changes in pls version 2.5-0}{
  \subsection{New features}{
    \itemize{
      \item Cross-validation can now keep all replicates in the same
      segment, through a new argument `nrep' to cvsegments().
    }
  }
  \subsection{Bug fixes}{
    \itemize{