@@ -1,7 +1,7 @@
 Package: pls
 Title: Partial Least Squares and Principal Component Regression
-Version: 2.7-1
-Date: 2019-03-23
+Version: 2.7-2
+Date: 2019-09-30
 Authors@R: c(person("Bjørn-Helge", "Mevik", role = c("aut", "cre"),
                      email = "b-h@mevik.net"),
               person("Ron", "Wehrens", role = "aut"),
@@ -25,6 +25,6 @@ URL: http://mevik.net/work/software/pls.html,
         https://github.com/bhmevik/pls
 BugReports: https://github.com/bhmevik/pls/issues
 NeedsCompilation: no
-Packaged: 2019-03-23 17:32:09 UTC; bhm
+Packaged: 2019-10-01 16:40:03 UTC; bhm
 Repository: CRAN
-Date/Publication: 2019-03-23 18:00:03 UTC
+Date/Publication: 2019-10-01 17:30:02 UTC
